--- a/Court_agent_ex.ipynb
+++ b/Court_agent_ex.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 31,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -18,12 +18,12 @@
         "load_dotenv() \n",
         "token = os.getenv(\"HF_API_TOKEN\")\n",
         "login(token=token)\n",
-        "\n"
+        "model=\"microsoft/Phi-3-mini-4k-instruct\"\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 32,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -88,51 +88,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 41,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# System prompts\n",
-        "\n",
-        "DEFENSE_SYSTEM = \"\"\"\n",
-        "You are **Alex Carter**, lead *defense counsel*.\n",
-        "Goals:\n",
-        "• Protect the constitutional rights of the defendant.\n",
-        "• Raise reasonable doubt by pointing out missing evidence or alternative explanations.\n",
-        "• Be respectful to the Court and to opposing counsel.\n",
-        "Style:\n",
-        "• Crisp, persuasive, grounded in precedent and facts provided.\n",
-        "• When citing precedent: give short case name + year (e.g., *Miranda v. Arizona* (1966)).\n",
-        "Ethics:\n",
-        "• Do not fabricate evidence; admit uncertainty when required.\n",
-        "\"\"\"\n",
-        "\n",
-        "PROSECUTION_SYSTEM = \"\"\"\n",
-        "You are **Jordan Blake**, *Assistant District Attorney* for the State.\n",
-        "Goals:\n",
-        "• Present the strongest good-faith case against the accused.\n",
-        "• Lay out facts logically, citing exhibits or witness statements when available.\n",
-        "• Anticipate and rebut common defense arguments.\n",
-        "Style:\n",
-        "• Formal but plain English; persuasive, with confident tone.\n",
-        "Ethics:\n",
-        "• Duty is to justice, not merely to win. Concede points when ethically required.\n",
-        "\"\"\"\n",
-        "\n",
-        "\n",
-        "# the two agents\n",
-        "\n",
-        "defense = LawyerAgent(\"Defense\", DEFENSE_SYSTEM)\n",
-        "prosecution = LawyerAgent(\"Prosecution\", PROSECUTION_SYSTEM)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 24,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "class CourtAgent:\n",
+        "class MainAgent:\n",
         "    def __init__(self, name: str, system_prompt: str, model: str, token: str):\n",
         "        self.name = name\n",
         "        self.system_prompt = system_prompt.strip()\n",
@@ -167,12 +127,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
         "# Defendent\n",
-        "class DefendantAgent(CourtAgent):\n",
+        "class DefendantAgent(MainAgent):\n",
         "    def __init__(self, model: str, token: str):\n",
         "        system_prompt = \"\"\"\n",
         "        You are the defendant. Respond truthfully to all questions about your actions and intentions.\n",
@@ -185,12 +145,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
         "# Plaintiff\n",
-        "class PlaintiffAgent(CourtAgent):\n",
+        "class PlaintiffAgent(MainAgent):\n",
         "    def __init__(self, model: str, token: str):\n",
         "        system_prompt = \"\"\"\n",
         "        You are the plaintiff. Clearly explain your grievance, the harm suffered, and what you seek from the court.\n",
@@ -203,12 +163,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
         "# Judge\n",
-        "class JudgeAgent(CourtAgent):\n",
+        "class JudgeAgent(MainAgent):\n",
         "    def __init__(self, model: str, token: str):\n",
         "        system_prompt = \"\"\"\n",
         "        You are the judge. Ensure fairness, rule on objections, explain the law, and make the final decision.\n",
@@ -221,12 +181,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
         "# Eye witness\n",
-        "class EyewitnessAgent(CourtAgent):\n",
+        "class EyewitnessAgent(MainAgent):\n",
         "    def __init__(self, name: str, witnessed_details: str, model: str, token: str):\n",
         "        system_prompt = f\"\"\"\n",
         "        You are an eyewitness named {name}. You witnessed the following: {witnessed_details}\n",
@@ -260,7 +220,41 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 38,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# System prompts\n",
+        "\n",
+        "DEFENSE_SYSTEM = \"\"\"\n",
+        "You are **Alex Carter**, lead *defense counsel*.\n",
+        "Goals:\n",
+        "• Protect the constitutional rights of the defendant.\n",
+        "• Raise reasonable doubt by pointing out missing evidence or alternative explanations.\n",
+        "• Be respectful to the Court and to opposing counsel.\n",
+        "Style:\n",
+        "• Crisp, persuasive, grounded in precedent and facts provided.\n",
+        "• When citing precedent: give short case name + year (e.g., *Miranda v. Arizona* (1966)).\n",
+        "Ethics:\n",
+        "• Do not fabricate evidence; admit uncertainty when required.\n",
+        "\"\"\"\n",
+        "\n",
+        "PROSECUTION_SYSTEM = \"\"\"\n",
+        "You are **Jordan Blake**, *Assistant District Attorney* for the State.\n",
+        "Goals:\n",
+        "• Present the strongest good-faith case against the accused.\n",
+        "• Lay out facts logically, citing exhibits or witness statements when available.\n",
+        "• Anticipate and rebut common defense arguments.\n",
+        "Style:\n",
+        "• Formal but plain English; persuasive, with confident tone.\n",
+        "Ethics:\n",
+        "• Duty is to justice, not merely to win. Concede points when ethically required.\n",
+        "\"\"\"\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -275,9 +269,9 @@
         "    # Initialize core agents\n",
         "    defense = LawyerAgent(\"Defense\", DEFENSE_SYSTEM)\n",
         "    prosecution = LawyerAgent(\"Prosecution\", PROSECUTION_SYSTEM)\n",
-        "    defendant = DefendantAgent(model=\"microsoft/Phi-3-mini-4k-instruct\", token=token)\n",
-        "    plaintiff = PlaintiffAgent(model=\"microsoft/Phi-3-mini-4k-instruct\", token=token)\n",
-        "    judge = JudgeAgent(model=\"microsoft/Phi-3-mini-4k-instruct\", token=token)\n",
+        "    defendant = DefendantAgent(model=model, token=token)\n",
+        "    plaintiff = PlaintiffAgent(model=model, token=token)\n",
+        "    judge = JudgeAgent(model=model, token=token)\n",
         "    \n",
         "    # Conditionally create eyewitness\n",
         "    eyewitness = None\n",
@@ -288,9 +282,6 @@
         "            model=\"microsoft/Phi-3-mini-4k-instruct\",\n",
         "            token=token\n",
         "        )\n",
-        "\n",
-        "    # ----- Trial Proceedings ----- #\n",
-        "    print(\"\\n\" + \"=\"*40 + \" TRIAL BEGINS \" + \"=\"*40)\n",
         "    \n",
         "    # 1. Opening Statements\n",
         "    print(\"\\n=== OPENING STATEMENTS ===\")\n",
@@ -324,8 +315,7 @@
         "    # 6. Verdict\n",
         "    print(\"\\n=== JUDGE'S VERDICT ===\")\n",
         "    print(\"JUDGE:\", judge.verdict())\n",
-        "    \n",
-        "    print(\"\\n\" + \"=\"*40 + \" TRIAL CONCLUDED \" + \"=\"*40 + \"\\n\")\n"
+        "    \n"
       ]
     },
     {
