add streamlit and agents

--- a/Court_Room.ipynb
+++ b/Court_Room.ipynb
@@ -34,55 +34,55 @@
         "from typing import List, Dict\n",
         "from huggingface_hub import InferenceClient\n",
         "\n",
-        "# class LawyerAgent:\n",
-        "#     def __init__(self,\n",
-        "#                  name: str,\n",
-        "#                  system_prompt: str,\n",
-        "#                  model: str = model):\n",
-        "#         self.name = name\n",
-        "#         self.system_prompt = system_prompt.strip()\n",
-        "#         self.history: List[Dict[str, str]] = []      # list of {\"role\": ..., \"content\": ...}\n",
-        "#         self.client = InferenceClient(\n",
-        "#             model,\n",
-        "#             token=token          # make sure this env‑var is set\n",
-        "#         )\n",
+        "class LawyerAgent:\n",
+        "    def __init__(self,\n",
+        "                 name: str,\n",
+        "                 system_prompt: str,\n",
+        "                 model: str = model):\n",
+        "        self.name = name\n",
+        "        self.system_prompt = system_prompt.strip()\n",
+        "        self.history: List[Dict[str, str]] = []      # list of {\"role\": ..., \"content\": ...}\n",
+        "        self.client = InferenceClient(\n",
+        "            model,\n",
+        "            token=token          # make sure this env‑var is set\n",
+        "        )\n",
         "\n",
-        "#     # ---- helper for HF prompt formatting ----------\n",
-        "#     def _format_prompt(self, user_msg: str) -> str:\n",
-        "#         \"\"\"\n",
-        "#         Formats a full prompt that includes\n",
-        "#         * system prompt\n",
-        "#         * prior turns\n",
-        "#         * new user message\n",
-        "#         \"\"\"\n",
-        "#         messages = [{\"role\": \"system\", \"content\": self.system_prompt}]\n",
-        "#         messages.extend(self.history)\n",
-        "#         messages.append({\"role\": \"user\", \"content\": user_msg})\n",
+        "    # ---- helper for HF prompt formatting ----------\n",
+        "    def _format_prompt(self, user_msg: str) -> str:\n",
+        "        \"\"\"\n",
+        "        Formats a full prompt that includes\n",
+        "        * system prompt\n",
+        "        * prior turns\n",
+        "        * new user message\n",
+        "        \"\"\"\n",
+        "        messages = [{\"role\": \"system\", \"content\": self.system_prompt}]\n",
+        "        messages.extend(self.history)\n",
+        "        messages.append({\"role\": \"user\", \"content\": user_msg})\n",
         "\n",
-        "#         # HF text-generation endpoints expect a single string.\n",
+        "        # HF text-generation endpoints expect a single string.\n",
         "\n",
-        "#         prompt = \"\"\n",
-        "#         for m in messages:\n",
-        "#             prompt += f\"<|{m['role']}|>\\n{m['content']}\\n\"\n",
-        "#         prompt += \"<|assistant|>\\n\"\n",
-        "#         return prompt\n",
+        "        prompt = \"\"\n",
+        "        for m in messages:\n",
+        "            prompt += f\"<|{m['role']}|>\\n{m['content']}\\n\"\n",
+        "        prompt += \"<|assistant|>\\n\"\n",
+        "        return prompt\n",
         "\n",
-        "#     # ---- produce a reply --------------------------\n",
-        "#     def respond(self, user_msg: str, **gen_kwargs) -> str:\n",
-        "#         prompt = self._format_prompt(user_msg)\n",
-        "#         completion = self.client.text_generation(\n",
-        "#             prompt,\n",
-        "#             max_new_tokens=512,\n",
-        "#             temperature=0.7,\n",
-        "#             do_sample=True,\n",
-        "#             stream=False,\n",
-        "#             **gen_kwargs\n",
-        "#         )\n",
-        "#         answer = completion.strip()\n",
-        "#         # keep chat memory\n",
-        "#         self.history.append({\"role\": \"user\", \"content\": user_msg})\n",
-        "#         self.history.append({\"role\": \"assistant\", \"content\": answer})\n",
-        "#         return answer\n",
+        "    # ---- produce a reply --------------------------\n",
+        "    def respond(self, user_msg: str, **gen_kwargs) -> str:\n",
+        "        prompt = self._format_prompt(user_msg)\n",
+        "        completion = self.client.text_generation(\n",
+        "            prompt,\n",
+        "            max_new_tokens=512,\n",
+        "            temperature=0.7,\n",
+        "            do_sample=True,\n",
+        "            stream=False,\n",
+        "            **gen_kwargs\n",
+        "        )\n",
+        "        answer = completion.strip()\n",
+        "        # keep chat memory\n",
+        "        self.history.append({\"role\": \"user\", \"content\": user_msg})\n",
+        "        self.history.append({\"role\": \"assistant\", \"content\": answer})\n",
+        "        return answer\n",
         "\n"
       ]
     },
