--- a/Court_Room.ipynb
+++ b/Court_Room.ipynb
@@ -518,6 +518,137 @@
         ")\n",
         "run_trial(case_background,eyewitness_details)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Unnamed: 0</th>\n",
+              "      <th>id</th>\n",
+              "      <th>text</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>0</td>\n",
+              "      <td>1989_75</td>\n",
+              "      <td>civil appellate jurisdiction civil appeal numb...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>1</td>\n",
+              "      <td>1959_102</td>\n",
+              "      <td>civil appellate jurisdiction civil appeal numb...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>2</td>\n",
+              "      <td>1979_76</td>\n",
+              "      <td>civil appellate jurisdiction civil appeal numb...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>3</td>\n",
+              "      <td>1991_124</td>\n",
+              "      <td>civil appellate jurisdiction civil appeal numb...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>4</td>\n",
+              "      <td>1985_233</td>\n",
+              "      <td>original jurisdiction writ petitions number. 8...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>95</th>\n",
+              "      <td>95</td>\n",
+              "      <td>1968_146</td>\n",
+              "      <td>\\nramaswami j. \\n\\nthese appeals are brought b...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>96</th>\n",
+              "      <td>96</td>\n",
+              "      <td>1992_528</td>\n",
+              "      <td>civil appellate jurisdiction special leave pet...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>97</th>\n",
+              "      <td>97</td>\n",
+              "      <td>1958_35</td>\n",
+              "      <td>criminal appellate jurisdiction criminal appea...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>98</th>\n",
+              "      <td>98</td>\n",
+              "      <td>1987_407</td>\n",
+              "      <td>civil appellate jurisdiction civil appeal numb...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>99</th>\n",
+              "      <td>99</td>\n",
+              "      <td>1952_41</td>\n",
+              "      <td>civil appellate jurisdiction civil appeal numb...</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>100 rows × 3 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "    Unnamed: 0        id                                               text\n",
+              "0            0   1989_75  civil appellate jurisdiction civil appeal numb...\n",
+              "1            1  1959_102  civil appellate jurisdiction civil appeal numb...\n",
+              "2            2   1979_76  civil appellate jurisdiction civil appeal numb...\n",
+              "3            3  1991_124  civil appellate jurisdiction civil appeal numb...\n",
+              "4            4  1985_233  original jurisdiction writ petitions number. 8...\n",
+              "..         ...       ...                                                ...\n",
+              "95          95  1968_146  \\nramaswami j. \\n\\nthese appeals are brought b...\n",
+              "96          96  1992_528  civil appellate jurisdiction special leave pet...\n",
+              "97          97   1958_35  criminal appellate jurisdiction criminal appea...\n",
+              "98          98  1987_407  civil appellate jurisdiction civil appeal numb...\n",
+              "99          99   1952_41  civil appellate jurisdiction civil appeal numb...\n",
+              "\n",
+              "[100 rows x 3 columns]"
+            ]
+          },
+          "execution_count": 1,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "import pandas as pd\n",
+        "df = pd.read_csv(\"/home/sairaj/Desktop/CODING(main folder)/main/Python/Projects/Cynaptics-phase2 Induction task/cases.csv\")\n",
+        "df"
+      ]
     }
   ],
   "metadata": {
