update jupyter notebook

--- a/cynaptics.ipynb
+++ b/cynaptics.ipynb
@@ -1022,7 +1022,7 @@
         "\n",
         "    return verdict\n",
         "\n",
-        "run_trial(case_background)\n"
+        "\n"
       ]
     },
     {
@@ -1275,6 +1275,8 @@
         "        case_background=case_background,\n",
         "        eyewitness_details=eyewitness_details\n",
         "    )\n",
+        "    \n",
+        "    run_trial(case_background)\n",
         "    verdict = judge.verdict()  # 0 or 1\n",
         "\n",
         "    print(verdict)\n",
